disable share and trash icons in the toolbar when there are no selected items

--- a/SelfieSwift/Base.lproj/Main.storyboard
+++ b/SelfieSwift/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                         <rect key="frame" x="0.0" y="86" width="600" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="de5-b7-o7C" id="VDE-mi-OV4">
-                                            <rect key="frame" x="0.0" y="0.0" width="567" height="89"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="567" height="89.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="prj-fp-5UB">
@@ -188,8 +188,10 @@
                         <outlet property="cameraButton" destination="QhU-8r-I1C" id="zJz-Dm-BPQ"/>
                         <outlet property="footerView" destination="eh5-7I-v6b" id="KPC-dD-vry"/>
                         <outlet property="markButton" destination="K0Q-5W-MwZ" id="N7O-fD-fy0"/>
+                        <outlet property="shareButton" destination="kbN-hm-8Bn" id="jdS-gZ-92I"/>
                         <outlet property="tableView" destination="Vlm-kv-LDb" id="9O8-gI-tXV"/>
                         <outlet property="toolBar" destination="50W-wn-hfn" id="khD-G7-13N"/>
+                        <outlet property="trashButton" destination="j1t-Ny-AH1" id="QOd-5m-jq7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Yl-7P-LEg" userLabel="First Responder" sceneMemberID="firstResponder"/>
