--- a/SelfieSwift/Base.lproj/Main.storyboard
+++ b/SelfieSwift/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8164.2" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="w47-54-gha">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8164.2" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IRj-Nz-Nba">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8135.1"/>
@@ -76,7 +76,7 @@
                                         <connections>
                                             <outlet property="selfieEditView" destination="cRt-Ew-P2w" id="Kgp-jU-S6w"/>
                                             <outlet property="selfieThumbNailView" destination="prj-fp-5UB" id="LA7-YA-84r"/>
-                                            <segue destination="z48-Rj-bdM" kind="show" identifier="show selfie" id="Wk0-DP-BCX"/>
+                                            <segue destination="z48-Rj-bdM" kind="showDetail" identifier="show selfie" id="Wk0-DP-BCX"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -215,7 +215,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xHz-ZN-gkr">
-                                <rect key="frame" x="20" y="64" width="560" height="516"/>
+                                <rect key="frame" x="20" y="20" width="560" height="560"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -232,7 +232,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fsA-xQ-TJi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2534" y="118"/>
+            <point key="canvasLocation" x="1030" y="928"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="FkU-ch-RKH">
@@ -252,5 +252,21 @@
             </objects>
             <point key="canvasLocation" x="1030" y="118"/>
         </scene>
+        <!--Split View Controller-->
+        <scene sceneID="N84-tJ-KyN">
+            <objects>
+                <splitViewController id="IRj-Nz-Nba" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="w47-54-gha" kind="relationship" relationship="masterViewController" id="IiW-xU-A0D"/>
+                        <segue destination="z48-Rj-bdM" kind="relationship" relationship="detailViewController" id="AuC-HC-sc6"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tJb-ec-CCj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="233" y="351"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="Wk0-DP-BCX"/>
+    </inferredMetricsTieBreakers>
 </document>
