--- a/SelfieSwift/Base.lproj/Main.storyboard
+++ b/SelfieSwift/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                         <rect key="frame" x="0.0" y="86" width="600" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="de5-b7-o7C" id="VDE-mi-OV4">
-                                            <rect key="frame" x="0.0" y="0.0" width="567" height="89"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="567" height="89.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="prj-fp-5UB">
@@ -95,13 +95,13 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="olX-HO-yn9"/>
-                                    <barButtonItem systemItem="action" id="kbN-hm-8Bn" userLabel="Share">
+                                    <barButtonItem enabled="NO" systemItem="action" id="kbN-hm-8Bn" userLabel="Share">
                                         <connections>
                                             <action selector="shareItems:" destination="wqG-UT-8Xb" id="7bU-BG-WbD"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="4pb-yV-cEL"/>
-                                    <barButtonItem systemItem="trash" id="j1t-Ny-AH1">
+                                    <barButtonItem enabled="NO" systemItem="trash" id="j1t-Ny-AH1">
                                         <connections>
                                             <action selector="trashItems:" destination="wqG-UT-8Xb" id="GBb-Ra-GuJ"/>
                                         </connections>
@@ -252,10 +252,10 @@
             </objects>
             <point key="canvasLocation" x="1030" y="118"/>
         </scene>
-        <!--Split View Controller-->
+        <!--GlobalUI Split View Controller-->
         <scene sceneID="N84-tJ-KyN">
             <objects>
-                <splitViewController id="IRj-Nz-Nba" sceneMemberID="viewController">
+                <splitViewController id="IRj-Nz-Nba" customClass="GlobalUISplitViewController" customModule="SelfieSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <connections>
                         <segue destination="w47-54-gha" kind="relationship" relationship="masterViewController" id="IiW-xU-A0D"/>
                         <segue destination="z48-Rj-bdM" kind="relationship" relationship="detailViewController" id="AuC-HC-sc6"/>
@@ -267,6 +267,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Wk0-DP-BCX"/>
+        <segue reference="AuC-HC-sc6"/>
     </inferredMetricsTieBreakers>
 </document>
